--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>ToDo List</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <script src="https://kit.fontawesome.com/7721374b3a.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<header>
+<header class="head">
     <ul class="tabs">
         <li class="tab-wrapper">
-            <a href="#current-tasks" class="tab tab-current-tasks">
+            <a href="#current-tasks" class="tab tab-current-tasks active">
                 Текущие задачи
                 (<span class="current-tasks-count"></span>)
             </a>
@@ -32,49 +33,21 @@
 </header>
 
 <main class="tabs-content">
-    <div id="current-tasks" class="tab-content">
-        <button class="tasks-create-btn">Добавить задачу</button>
-
+    <div id="current-tasks" class="tab-content target">
+        <button class="tasks-create-btn">+ Добавить задачу</button>
         <table class="table table-current-tasks">
-            <thead class="table-head">
-                <tr>
-                    <th>Выполнено</th>
-                    <th>Задача</th>
-                    <th>Приоритет</th>
-                    <th>Управление</th>
-                </tr>
-            </thead>
-
             <tbody class="table-body"></tbody>
         </table>
     </div>
 
     <div id="completed-tasks" class="tab-content">
         <table class="table table-completed-tasks">
-            <thead class="table-head">
-                <tr>
-                    <th>Выполнено</th>
-                    <th>Задача</th>
-                    <th>Приоритет</th>
-                    <th>Управление</th>
-                </tr>
-            </thead>
-
             <tbody class="table-body"></tbody>
         </table>
     </div>
 
     <div id="deleted-tasks" class="tab-content">
         <table class="table table-deleted-tasks">
-            <thead class="table-head">
-                <tr>
-                    <th>Выполнено</th>
-                    <th>Задача</th>
-                    <th>Приоритет</th>
-                    <th>Управление</th>
-                </tr>
-            </thead>
-
             <tbody class="table-body"></tbody>
         </table>
     </div>
@@ -83,38 +56,35 @@
 <dialog class="modal-window">
     <div class="modal-window__content-wrapper">
         <form name="form" class="form">
-            <label for="task">Название задачи</label>
-            <input type="text" name="task" id="task" class="form__task" required>
+            <label for="title" class="form__label-title">Название задачи</label>
+            <input type="text" name="title" id="title" class="form__title" autocomplete="off" required>
 
-            <label for="description">Описание</label>
+            <label for="description" class="form__label-description">Описание</label>
             <textarea name="description" id="description" class="form__description"></textarea>
 
             <fieldset class="form__priority">
-                <legend>Выберите приоритет</legend>
+                <legend class="form__legend-priority">Выберите приоритет</legend>
 
-                <label for="indefinite">
-                    <input type="radio" name="priority" id="indefinite" class="form__btn-priority"
-                           value="Бессрочный" checked>
+                <label>
+                    <input type="radio" name="priority" class="form__btn-priority" value="Бессрочный" checked>
                     Бессрочный
                 </label>
 
-                <label for="urgent">
-                    <input type="radio" name="priority" id="urgent" class="form__btn-priority"
-                           value="Срочный">
+                <label>
+                    <input type="radio" name="priority" class="form__btn-priority" value="Срочный">
                     Срочный
                 </label>
 
-                <label for="trial">
-                    <input type="radio" name="priority" id="trial" class="form__btn-priority"
-                           value="Триальный">
+                <label>
+                    <input type="radio" name="priority" class="form__btn-priority" value="Триальный">
                     Триальный
                 </label>
             </fieldset>
 
-            <div>
-                <button type="submit" class="form__btn-create">Создать</button>
-                <button type="submit" class="form__btn-edit hide">Принять изменения</button>
+            <div class="form__btn-wrapper">
                 <button type="reset" class="form__btn-close">Отменить</button>
+                <button type="submit" class="form__btn-edit hide">Принять изменения</button>
+                <button type="submit" class="form__btn-create">Создать</button>
             </div>
         </form>
     </div>
@@ -123,34 +93,39 @@
 <template id="template__table-content">
     <tr class="table-body__task">
         <td class="task__btn-done">
-            <button class="btn-done"></button>
+            <button class="btn-done">
+                <i class="fas fa-check"></i>
+            </button>
         </td>
 
         <td class="task__info">
-            <p class="title"></p>
+            <p class="task__title"></p>
             <button class="btn-description hide"></button>
-            <p class="description hide"></p>
+            <p class="task__description hide"></p>
         </td>
 
-        <td class="task__priority">
-            <p class="priority"></p>
+        <td class="task__priority-wrapper">
+            <p class="task__priority"></p>
         </td>
 
         <td class="task__management">
-            <button class="btn-edit-task">Редактировать</button>
-            <button class="btn-delete-task">Удалить</button>
-            <button class="btn-recover-task hide">Восстановить</button>
+            <button class="task__btn-edit" data-title="Редактировать"><i class="fas fa-edit"></i></button>
+            <button class="task__btn-delete" data-title="Удалить"><i class="fas fa-trash"></i></button>
+            <button class="task__btn-recover hide" data-title="Восстановить"><i class="fas fa-undo"></i></button>
         </td>
     </tr>
 </template>
 
-<script src="js/show_tab_content.js"></script>
-<script src="js/count_tasks.js"></script>
-<script src="js/show_modal_window.js"></script>
-<script src="js/manage_tasks.js"></script>
-<script src="js/add_task.js"></script>
+<script src="./js/tab-content.js"></script>
+<script src="./js/form.js"></script>
+<!--<script type="module" src="js/index.js"></script>-->
+<script src="./js/count-tasks.js"></script>
+<script src="./js/manage-tasks.js"></script>
+<script src="./js/task.js"></script>
 
-<!--<script src="js/index.js"></script>-->
+
+
+
 
 </body>
 </html>
