--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>ToDo List</title>
-    <link rel="stylesheet" href="./css/styles.css">
     <script src="https://kit.fontawesome.com/7721374b3a.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -122,7 +121,6 @@
     </tr>
 </template>
 
-<script type="module" src="./js/index.js"></script>
-
+<script type="module" src="src/index.js"></script>
 </body>
 </html>
